# simple-backtester

./: .gitignore  README.md  pyproject.toml  tox.ini
simple_backtester/: data.py  order.py  strat.py
tests/: conftest.py  test_data.py  test_strat.py  tox.ini
tests/data/: test_data.csv
