[tool.poetry]
name = "simple-backtester"
version = "0.1.0"
description = "Simple, no frills backtesting"
authors = ["Shida Sharif <ssbakh07@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">1.26.0, <2.0.0"
pandas = "*"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"